--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/firebase": "^3.2.1",
     "@types/node": "^14.14.35",
     "concurrently": "^6.0.0",
     "nodemon": "^2.0.7",
