--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "homepage": "https://github.com/Accountability-App/Back-End#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "firebase": "^8.3.1"
+    "firebase": "^8.3.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/firebase": "^3.2.1",
     "@types/node": "^14.14.35",
+    "@types/uuid": "^8.3.0",
     "concurrently": "^6.0.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
